--- a/lorenz_example.ipynb
+++ b/lorenz_example.ipynb
@@ -204,7 +204,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "torch_reservoir",
+   "display_name": "math513",
    "language": "python",
    "name": "python3"
   },
@@ -218,7 +218,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
